# CustomProtocol

./: CMakeLists.txt
include/: Protocol.h
src/: Client.cpp  Protocol.cpp  Server.cpp
